[package]
name = "scell"
version = "1.0.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
description = "A smart container for objects in recursive data structures"
keywords = ["cell", "rc", "scell", "smart", "managed", "runtime", "feature", "container", "mesh", "graph"]
documentation = "https://vadixidav.github.io/scell/scell/"
repository = "https://github.com/vadixidav/scell/"
license = "BSD-2-Clause"

[features]
default = []
unchecked = []
